sort up and down

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- Таблица с данными, заполняется динамически в файле fill-table.js -->
     <ul id="table" class="main-table">
       <li class="header-row">
-        <div class="table-header">First name</div>
-        <div class="table-header">Last name</div>
-        <div class="table-header">About</div>
-        <div class="table-header">Eye color</div>
+        <div class="table-header unsorted">First name</div>
+        <div class="table-header unsorted">Last name</div>
+        <div class="table-header unsorted">About</div>
+        <div class="table-header unsorted">Eye color</div>
       </li>
     </ul>
     <!-- Форма для изменения строки в таблице -->
