--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
     <!-- Таблица с данными, заполняется динамически в файле fill-table.js -->
     <ul id="table" class="main-table">
       <li class="header-row">
-        <div class="table-header unsorted">First name</div>
-        <div class="table-header unsorted">Last name</div>
+        <div class="table-header unsorted">
+          First <br />
+          name
+        </div>
+        <div class="table-header unsorted">
+          Last <br />
+          name
+        </div>
         <div class="table-header unsorted">About</div>
-        <div class="table-header unsorted">Eye color</div>
+        <div class="table-header unsorted">Eye <br> color</div>
       </li>
     </ul>
     <!-- Форма для изменения строки в таблице -->
