--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       ></textarea>
       <label for="eye-color" class="change-row-label">Change eye color</label>
       <input
-        type="text"
+        type="color"
         id="eye-color"
         placeholder="New eye color"
         class="change-row-input change-row-field"
@@ -85,5 +85,5 @@
       </ul>
     </form>
   </body>
-  <script src="./js/fill-table.js" defer></script>
+  <script src="/js/fill-table.js" type="module" defer></script>
 </html>
