--- a/index.html
+++ b/index.html
@@ -85,5 +85,5 @@
       </ul>
     </form>
   </body>
-  <script src="/js/fill-table.js" type="module" defer></script>
+  <script src="/js/main.js" type="module" defer></script>
 </html>
