--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
       </li>
     </ul>
+    <!-- С помощью этих кнопок меняются страницы -->
     <div class="table-buttons">
       <div class="">
         <button class="table-button hidden" id="prev-button">
