--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/rezet.css" />
     <link rel="stylesheet" href="./css/table.css" />
-    <link rel="stylesheet" href="./css/form.css" />
+    <link rel="stylesheet" href="./css/change-form.css" />
     <link rel="stylesheet" href="./css/hide-display-form.css" />
     <title>Infotecs</title>
   </head>
@@ -93,10 +93,10 @@
         >Выберите какую колонку скрыть/показать</label
       >
       <select id="hide-dispalay-column" class="hide-column-form__select">
-        <option class="hide-column-form__option">First name</option>
-        <option class="hide-column-form__option">Last name</option>
-        <option class="hide-column-form__option">About</option>
-        <option class="hide-column-form__option">Eye color</option>
+        <option class="hide-column-form__option" value="0">First name</option>
+        <option class="hide-column-form__option" value="1">Last name</option>
+        <option class="hide-column-form__option" value="2">About</option>
+        <option class="hide-column-form__option" value="3">Eye color</option>
       </select>
       <button class="hide-column-form__button">Применить</button>
     </form>
